repaired broken link

--- a/projects.html
+++ b/projects.html
@@ -168,7 +168,7 @@
           <div class="project-container">
             <img src="./images/Doe Portfolio.jpg" alt="single project" />
             <a
-              href="https://luqueporfolio01.netlify.app/"
+              href="https://porfolio-project-01.netlify.app/"
               class="project-icon"
               target="_blank"
             >
