more projects added

--- a/projects.html
+++ b/projects.html
@@ -575,6 +575,262 @@
           </div>
         </article>
         <!--end of single project -->
+        <!-- single project -->
+        <article class="single-project">
+          <div class="project-container">
+            <img src="./images/13-hipster-ipsum.jpg" alt="single project" />
+            <a
+              href="https://js-13-hipster-ipsum.netlify.app/"
+              class="project-icon"
+              target="_blank"
+            >
+              <i class="fas fa-home"></i>
+            </a>
+          </div>
+          <div class="project-details">
+            <h4>Javascript hipster ipsum project</h4>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deserunt
+              impedit vel architecto debitis ipsa nihil, ipsam asperiores in aut
+              consequatur!
+            </p>
+            <div class="project-footer">
+              <span>
+                <i class="fab fa-github"></i>
+              </span>
+              <a
+                href="https://github.com/JorgeTorquato/13-lorem-ipsum"
+                target="_blank"
+                >source code</a
+              >
+            </div>
+          </div>
+        </article>
+        <!--end of single project -->
+        <!-- single project -->
+        <article class="single-project">
+          <div class="project-container">
+            <img src="./images/14-grocery-bud.jpg" alt="single project" />
+            <a
+              href="https://js-14-grocery-bud.netlify.app/"
+              class="project-icon"
+              target="_blank"
+            >
+              <i class="fas fa-home"></i>
+            </a>
+          </div>
+          <div class="project-details">
+            <h4>Javascript grocery bud project</h4>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deserunt
+              impedit vel architecto debitis ipsa nihil, ipsam asperiores in aut
+              consequatur!
+            </p>
+            <div class="project-footer">
+              <span>
+                <i class="fab fa-github"></i>
+              </span>
+              <a
+                href="https://github.com/JorgeTorquato/14-grocery-bud"
+                target="_blank"
+                >source code</a
+              >
+            </div>
+          </div>
+        </article>
+        <!--end of single project -->
+        <!-- single project -->
+        <article class="single-project">
+          <div class="project-container">
+            <img src="./images/15-slider.jpg" alt="single project" />
+            <a
+              href="https://js-15-slider.netlify.app/"
+              class="project-icon"
+              target="_blank"
+            >
+              <i class="fas fa-home"></i>
+            </a>
+          </div>
+          <div class="project-details">
+            <h4>Javascript slider project</h4>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deserunt
+              impedit vel architecto debitis ipsa nihil, ipsam asperiores in aut
+              consequatur!
+            </p>
+            <div class="project-footer">
+              <span>
+                <i class="fab fa-github"></i>
+              </span>
+              <a
+                href="https://github.com/JorgeTorquato/15-slider-project"
+                target="_blank"
+                >source code</a
+              >
+            </div>
+          </div>
+        </article>
+        <!--end of single project -->
+        <!-- single project -->
+        <article class="single-project">
+          <div class="project-container">
+            <img src="./images/16-double-counter.jpg" alt="single project" />
+            <a
+              href="https://js-16-double-counter.netlify.app/"
+              class="project-icon"
+              target="_blank"
+            >
+              <i class="fas fa-home"></i>
+            </a>
+          </div>
+          <div class="project-details">
+            <h4>Javascript double counter project</h4>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deserunt
+              impedit vel architecto debitis ipsa nihil, ipsam asperiores in aut
+              consequatur!
+            </p>
+            <div class="project-footer">
+              <span>
+                <i class="fab fa-github"></i>
+              </span>
+              <a
+                href="https://github.com/JorgeTorquato/16-counter"
+                target="_blank"
+                >source code</a
+              >
+            </div>
+          </div>
+        </article>
+        <!--end of single project -->
+        <!-- single project -->
+        <article class="single-project">
+          <div class="project-container">
+            <img src="./images/17-gallery.jpg" alt="single project" />
+            <a
+              href="https://js-17-gallery.netlify.app/"
+              class="project-icon"
+              target="_blank"
+            >
+              <i class="fas fa-home"></i>
+            </a>
+          </div>
+          <div class="project-details">
+            <h4>Javascript gallery project</h4>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deserunt
+              impedit vel architecto debitis ipsa nihil, ipsam asperiores in aut
+              consequatur!
+            </p>
+            <div class="project-footer">
+              <span>
+                <i class="fab fa-github"></i>
+              </span>
+              <a
+                href="https://github.com/JorgeTorquato/17-gallery"
+                target="_blank"
+                >source code</a
+              >
+            </div>
+          </div>
+        </article>
+        <!--end of single project -->
+        <!-- single project -->
+        <article class="single-project">
+          <div class="project-container">
+            <img src="./images/18-numbers.jpg" alt="single project" />
+            <a
+              href="https://js-18-numbers.netlify.app/"
+              class="project-icon"
+              target="_blank"
+            >
+              <i class="fas fa-home"></i>
+            </a>
+          </div>
+          <div class="project-details">
+            <h4>Javascript counter project</h4>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deserunt
+              impedit vel architecto debitis ipsa nihil, ipsam asperiores in aut
+              consequatur!
+            </p>
+            <div class="project-footer">
+              <span>
+                <i class="fab fa-github"></i>
+              </span>
+              <a
+                href="https://github.com/JorgeTorquato/18-numbers"
+                target="_blank"
+                >source code</a
+              >
+            </div>
+          </div>
+        </article>
+        <!--end of single project -->
+        <!-- single project -->
+        <article class="single-project">
+          <div class="project-container">
+            <img src="./images/19-dark-mode.jpg" alt="single project" />
+            <a
+              href="https://js-19-dark-mode.netlify.app/"
+              class="project-icon"
+              target="_blank"
+            >
+              <i class="fas fa-home"></i>
+            </a>
+          </div>
+          <div class="project-details">
+            <h4>Javascript dark mode project</h4>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deserunt
+              impedit vel architecto debitis ipsa nihil, ipsam asperiores in aut
+              consequatur!
+            </p>
+            <div class="project-footer">
+              <span>
+                <i class="fab fa-github"></i>
+              </span>
+              <a
+                href="https://github.com/JorgeTorquato/19-dark-mode"
+                target="_blank"
+                >source code</a
+              >
+            </div>
+          </div>
+        </article>
+        <!--end of single project -->
+        <!-- single project -->
+        <article class="single-project">
+          <div class="project-container">
+            <img src="./images/20-filters.jpg" alt="single project" />
+            <a
+              href="https://js-20-filters.netlify.app/"
+              class="project-icon"
+              target="_blank"
+            >
+              <i class="fas fa-home"></i>
+            </a>
+          </div>
+          <div class="project-details">
+            <h4>Javascript filters project</h4>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deserunt
+              impedit vel architecto debitis ipsa nihil, ipsam asperiores in aut
+              consequatur!
+            </p>
+            <div class="project-footer">
+              <span>
+                <i class="fab fa-github"></i>
+              </span>
+              <a
+                href="https://github.com/JorgeTorquato/20-filters"
+                target="_blank"
+                >source code</a
+              >
+            </div>
+          </div>
+        </article>
+        <!--end of single project -->
       </div>
     </section>
 
