--- a/contact.html
+++ b/contact.html
@@ -99,7 +99,7 @@
         <!-- contact page-->
         <p>
           If you are looking to get ahold of me, you can send me an email at
-          <a href="mailto:email@email.com">@your_email</a>
+          <a href="mailto:email@email.com">jorge.luque.martin@hts.edu</a>
         </p>
         <p>
           You can also reach me on Twitter at
