--- a/projects.html
+++ b/projects.html
@@ -868,7 +868,7 @@
           <div class="project-container">
             <img src="./images/22-products.jpg" />
             <a
-              href="https://js-22-products.netlify.app/"
+              href="https://super-belekoy-21828c.netlify.app/"
               class="project-icon"
               target="_blank"
             >
