--- a/projects.html
+++ b/projects.html
@@ -868,7 +868,7 @@
           <div class="project-container">
             <img src="./images/22-products.jpg" />
             <a
-              href="https://super-belekoy-21828c.netlify.app/"
+              href="https://mellifluous-meerkat-705133.netlify.app/"
               class="project-icon"
               target="_blank"
             >
@@ -887,7 +887,7 @@
                 <i class="fab fa-github"></i>
               </span>
               <a
-                href="https://github.com/JorgeTorquato/22-products"
+                href="https://github.com/JorgeTorquato/22-furniture"
                 target="_blank"
                 >source code</a
               >
