2 more projects added

--- a/projects.html
+++ b/projects.html
@@ -959,6 +959,70 @@
           </div>
         </article>
         <!--end of single project -->
+        <!-- single project -->
+        <article class="single-project">
+          <div class="project-container">
+            <img src="./images/25-slider.jpg" />
+            <a
+              href="https://js-25-slider.netlify.app/"
+              class="project-icon"
+              target="_blank"
+            >
+              <i class="fas fa-home"></i>
+            </a>
+          </div>
+          <div class="project-details">
+            <h4>Javascript slider project</h4>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deserunt
+              impedit vel architecto debitis ipsa nihil, ipsam asperiores in aut
+              consequatur!
+            </p>
+            <div class="project-footer">
+              <span>
+                <i class="fab fa-github"></i>
+              </span>
+              <a
+                href="https://github.com/JorgeTorquato/25-slider"
+                target="_blank"
+                >source code</a
+              >
+            </div>
+          </div>
+        </article>
+        <!--end of single project -->
+        <!-- single project -->
+        <article class="single-project">
+          <div class="project-container">
+            <img src="./images/26-stripe.jpg" />
+            <a
+              href="https://js-26-stripe-submenus.netlify.app/"
+              class="project-icon"
+              target="_blank"
+            >
+              <i class="fas fa-home"></i>
+            </a>
+          </div>
+          <div class="project-details">
+            <h4>Javascript stripe submenus</h4>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deserunt
+              impedit vel architecto debitis ipsa nihil, ipsam asperiores in aut
+              consequatur!
+            </p>
+            <div class="project-footer">
+              <span>
+                <i class="fab fa-github"></i>
+              </span>
+              <a
+                href="https://github.com/JorgeTorquato/26-stripe-submenus"
+                target="_blank"
+                >source code</a
+              >
+            </div>
+          </div>
+        </article>
+        <!--end of single project -->
       </div>
     </section>
 
