--- a/projects.html
+++ b/projects.html
@@ -1055,6 +1055,70 @@
           </div>
         </article>
         <!--end of single project -->
+        <!-- single project -->
+        <article class="single-project">
+          <div class="project-container">
+            <img src="./images/28-wikipedia.jpg" />
+            <a
+              href="https://js-28-wikipedia.netlify.app/"
+              class="project-icon"
+              target="_blank"
+            >
+              <i class="fas fa-home"></i>
+            </a>
+          </div>
+          <div class="project-details">
+            <h4>Javascript wikipedia project</h4>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deserunt
+              impedit vel architecto debitis ipsa nihil, ipsam asperiores in aut
+              consequatur!
+            </p>
+            <div class="project-footer">
+              <span>
+                <i class="fab fa-github"></i>
+              </span>
+              <a
+                href="https://github.com/JorgeTorquato/28-wikipedia"
+                target="_blank"
+                >source code</a
+              >
+            </div>
+          </div>
+        </article>
+        <!--end of single project -->
+        <!-- single project -->
+        <article class="single-project">
+          <div class="project-container">
+            <img src="./images/29-e-commerce.jpg" />
+            <a
+              href="https://js-29-e-commerce-store.netlify.app/"
+              class="project-icon"
+              target="_blank"
+            >
+              <i class="fas fa-home"></i>
+            </a>
+          </div>
+          <div class="project-details">
+            <h4>Javascript comfy store</h4>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deserunt
+              impedit vel architecto debitis ipsa nihil, ipsam asperiores in aut
+              consequatur!
+            </p>
+            <div class="project-footer">
+              <span>
+                <i class="fab fa-github"></i>
+              </span>
+              <a
+                href="https://github.com/JorgeTorquato/29-e-commerce-store"
+                target="_blank"
+                >source code</a
+              >
+            </div>
+          </div>
+        </article>
+        <!--end of single project -->
       </div>
     </section>
 
