--- a/projects.html
+++ b/projects.html
@@ -97,7 +97,14 @@
       <!-- end of section title -->
     </header>
 
+    <!-- HTML & CSS Projects -->
     <section class="section">
+      <!-- section title -->
+      <div class="section-title">
+        <h2>HTML & CSS</h2>
+        <div class="underline"></div>
+      </div>
+      <!-- end of section title -->
       <div class="section-center projects-page-center">
         <!-- single project -->
         <article class="single-project">
@@ -195,6 +202,124 @@
           </div>
         </article>
         <!--end of single project -->
+      </div>
+    </section>
+    <!-- Javascript Games -->
+    <section class="section second-section">
+      <!-- section title -->
+      <div class="section-title">
+        <h2>HTML5 & JavaScript Games</h2>
+        <div class="underline"></div>
+      </div>
+      <!-- end of section title -->
+      <div class="section-center projects-page-center">
+        <!-- single project -->
+        <article class="single-project">
+          <div class="project-container">
+            <img src="./images/30-snake-game.png" alt="single project" />
+            <a
+              href="https://js-01-snake-game.netlify.app/"
+              class="project-icon"
+              target="_blank"
+            >
+              <i class="fas fa-home"></i>
+            </a>
+          </div>
+          <div class="project-details">
+            <h4>snake game</h4>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deserunt
+              impedit vel architecto debitis ipsa nihil, ipsam asperiores in aut
+              consequatur!
+            </p>
+            <div class="project-footer">
+              <span>
+                <i class="fab fa-github"></i>
+              </span>
+              <a
+                href="https://github.com/JorgeTorquato/01-snake-game"
+                target="_blank"
+                >source code</a
+              >
+            </div>
+          </div>
+        </article>
+        <!--end of single project -->
+        <!-- single project -->
+        <article class="single-project">
+          <div class="project-container">
+            <img src="./images/space-invaders.png" alt="single project" />
+            <a
+              href="https://js-space-invaders-game.netlify.app/"
+              class="project-icon"
+              target="_blank"
+            >
+              <i class="fas fa-home"></i>
+            </a>
+          </div>
+          <div class="project-details">
+            <h4>space-invaders</h4>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deserunt
+              impedit vel architecto debitis ipsa nihil, ipsam asperiores in aut
+              consequatur!
+            </p>
+            <div class="project-footer">
+              <span>
+                <i class="fab fa-github"></i>
+              </span>
+              <a
+                href="https://github.com/JorgeTorquato/02-space-invaders"
+                target="_blank"
+                >source code</a
+              >
+            </div>
+          </div>
+        </article>
+        <!--end of single project -->
+        <!-- single project -->
+        <article class="single-project">
+          <div class="project-container">
+            <img src="./images/fighting-game.png" alt="single project" />
+            <a
+              href="https://04-js-fighting-game.netlify.app/"
+              class="project-icon"
+              target="_blank"
+            >
+              <i class="fas fa-home"></i>
+            </a>
+          </div>
+          <div class="project-details">
+            <h4>fighting-game</h4>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deserunt
+              impedit vel architecto debitis ipsa nihil, ipsam asperiores in aut
+              consequatur!
+            </p>
+            <div class="project-footer">
+              <span>
+                <i class="fab fa-github"></i>
+              </span>
+              <a
+                href="https://github.com/JorgeTorquato/01-JSGame-Fighting-game"
+                target="_blank"
+                >source code</a
+              >
+            </div>
+          </div>
+        </article>
+        <!--end of single project -->
+      </div>
+    </section>
+    <!-- JavaScript Projects -->
+    <section class="section second-section">
+      <!-- section title -->
+      <div class="section-title">
+        <h2>Javascript</h2>
+        <div class="underline"></div>
+      </div>
+      <!-- end of section title -->
+      <div class="section-center projects-page-center">
         <!-- single project -->
         <article class="single-project">
           <div class="project-container">
