--- a/projects.html
+++ b/projects.html
@@ -1287,7 +1287,7 @@
         <!-- end of single item -->
       </ul>
 
-      <p>&copy; <span id="date"></span> John Doe. All rights reserved.</p>
+      <p>&copy; <span id="date"></span> Jorge Luque. All rights reserved.</p>
     </footer>
     <script src="./js/app.js"></script>
   </body>
