updated social media

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <!-- social icons -->
         <ul class="social-icons">
           <li>
-            <a href="https://facebook.com" class="social-icon"
+            <a href="https://www.facebook.com/jorgelm78" class="social-icon"
               ><i class="fab fa-facebook"></i
             ></a>
           </li>
@@ -102,7 +102,7 @@
           <ul class="social-icons hero-icons">
             <li>
               <a
-                href="https://facebook.com"
+                href="https://www.facebook.com/jorgelm78"
                 class="social-icon hero-icon"
                 target="_blank"
                 ><i class="fab fa-facebook"></i
@@ -595,7 +595,7 @@
       <!-- social icons -->
       <ul class="social-icons">
         <li>
-          <a href="https://facebook.com" class="social-icon"
+          <a href="https://www.facebook.com/jorgelm78" class="social-icon"
             ><i class="fab fa-facebook"></i
           ></a>
         </li>
