--- a/projects.html
+++ b/projects.html
@@ -1252,7 +1252,7 @@
       <ul class="social-icons">
         <!-- single item -->
         <li>
-          <a href="https://www.twitter.com" class="social-icon">
+          <a href="https://www.facebook.com/jorgelm78" class="social-icon">
             <i class="fab fa-facebook"></i>
           </a>
         </li>
