--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,7 @@
         <ul class="social-icons">
           <!-- single item -->
           <li>
-            <a href="https://www.twitter.com" class="social-icon">
+            <a href="https://www.facebook.com/jorgelm78" class="social-icon">
               <i class="fab fa-facebook"></i>
             </a>
           </li>
@@ -117,7 +117,7 @@
       <ul class="social-icons">
         <!-- single item -->
         <li>
-          <a href="https://www.twitter.com" class="social-icon">
+          <a href="https://www.facebook.com/jorgelm78" class="social-icon">
             <i class="fab fa-facebook"></i>
           </a>
         </li>
