--- a/contact.html
+++ b/contact.html
@@ -102,8 +102,8 @@
           <a href="mailto:email@email.com">jorge.luque.martin@hts.edu</a>
         </p>
         <p>
-          You can also reach me on Twitter at
-          <a href="https://www.twitter.com">@your_social_media </a>
+          You can also reach me on Facebook at
+          <a href="https://www.facebook.com/jorgelm78">@Jorge-Luque </a>
         </p>
       </div>
     </section>
