--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@
     <section class="section blog">
       <!-- section title -->
       <div class="section-title">
-        <h2>blog</h2>
+        <h2>Last Projects</h2>
         <div class="underline"></div>
       </div>
       <!-- end of section title -->
@@ -505,13 +505,15 @@
               </p>
               <div class="card-footer">
                 <img src="./images/portfolio-pic.JPG" alt="author image" />
-                <p>7 minutes read</p>
+                <p>Flip the Card and...</p>
               </div>
             </div>
           </div>
           <!-- card back -->
           <div class="card-side card-back">
-            <button class="btn">read more</button>
+            <a href="https://luque-backroads.netlify.app/" target="_blank">
+              <button class="btn">Take a Look</button>
+            </a>
           </div>
         </div>
         <!--end of single article -->
@@ -529,13 +531,15 @@
               </p>
               <div class="card-footer">
                 <img src="./images/portfolio-pic.JPG" alt="author image" />
-                <p>7 minutes read</p>
+                <p>Flip the Card and...</p>
               </div>
             </div>
           </div>
           <!-- card back -->
           <div class="card-side card-back">
-            <button class="btn">read more</button>
+            <a href="https://luque-tea-project.netlify.app/" target="_blank">
+              <button class="btn">Take a look</button>
+            </a>
           </div>
         </div>
         <!--end of single article -->
@@ -553,13 +557,15 @@
               </p>
               <div class="card-footer">
                 <img src="./images/portfolio-pic.JPG" alt="author image" />
-                <p>7 minutes read</p>
+                <p>Flip the Card and...</p>
               </div>
             </div>
           </div>
           <!-- card back -->
           <div class="card-side card-back">
-            <button class="btn">read more</button>
+            <a href="https://porfolio-project-01.netlify.app/" target="_blank">
+              <button class="btn">Take a Look</button>
+            </a>
           </div>
         </div>
         <!--end of single article -->
@@ -567,23 +573,82 @@
         <div class="card">
           <!-- card front  -->
           <div class="card-side card-front">
-            <img src="./images/project-1.jpeg" alt="website" />
+            <img src="./images/30-snake-game.png" alt="website" />
             <div class="card-info">
-              <h4>article title</h4>
+              <h4>Snake & Apples</h4>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum
-                facilis optio officiis sequi similique a quae velit
-                necessitatibus dolores repudiandae.
+                Use the Arrow Keys to Control the Snake! Snakes & Apples is a
+                free thinking game for children and adults alike, where the goal
+                is to guide the snake to eat all the apples in their correct
+                order.
               </p>
               <div class="card-footer">
                 <img src="./images/portfolio-pic.JPG" alt="author image" />
-                <p>7 minutes read</p>
+                <p>Insert Coin</p>
               </div>
             </div>
           </div>
           <!-- card back -->
           <div class="card-side card-back">
-            <button class="btn">read more</button>
+            <a href="https://js-01-snake-game.netlify.app/" target="_blank">
+              <button class="btn">Game On</button>
+            </a>
+          </div>
+        </div>
+        <!--end of single article -->
+        <!-- single article -->
+        <div class="card">
+          <!-- card front  -->
+          <div class="card-side card-front">
+            <img src="./images/space-invaders.png" alt="website" />
+            <div class="card-info">
+              <h4>Space Invaders</h4>
+              <p>
+                Use A to go Left, D to go Right, and the Space Bar to shoot!
+                Space Invaders is a fixed shooter in which the player moves a
+                laser cannon horizontally across the bottom of the screen and
+                fires at aliens overhead.
+              </p>
+              <div class="card-footer">
+                <img src="./images/portfolio-pic.JPG" alt="author image" />
+                <p>Insert Coin</p>
+              </div>
+            </div>
+          </div>
+          <!-- card back -->
+          <div class="card-side card-back">
+            <a
+              href="https://js-space-invaders-game.netlify.app/"
+              target="_blank"
+            >
+              <button class="btn">Game On</button>
+            </a>
+          </div>
+        </div>
+        <!--end of single article -->
+        <!-- single article -->
+        <div class="card">
+          <!-- card front  -->
+          <div class="card-side card-front">
+            <img src="./images/fighting-game.png" alt="website" />
+            <div class="card-info">
+              <h4>Fighting Game</h4>
+              <p>
+                Fighting Game with HTML Canvas and Javascript. For two players.
+                Move Player One with W, A, S, D keys and move Player Two with
+                the Arrow Keys. Slash your opponent with the Space Bar!
+              </p>
+              <div class="card-footer">
+                <img src="./images/portfolio-pic.JPG" alt="author image" />
+                <p>Insert Coin</p>
+              </div>
+            </div>
+          </div>
+          <!-- card back -->
+          <div class="card-side card-back">
+            <a href="https://04-js-fighting-game.netlify.app/" target="_blank">
+              <button class="btn">Game On</button>
+            </a>
           </div>
         </div>
         <!--end of single article -->
