--- a/projects.html
+++ b/projects.html
@@ -226,11 +226,12 @@
             </a>
           </div>
           <div class="project-details">
-            <h4>snake game</h4>
+            <h4>snakes & Apples</h4>
             <p>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deserunt
-              impedit vel architecto debitis ipsa nihil, ipsam asperiores in aut
-              consequatur!
+              Use A to go Left, D to go Right, and the Space Bar to shoot! Space
+              Invaders is a fixed shooter in which the player moves a laser
+              cannon horizontally across the bottom of the screen and fires at
+              aliens overhead.
             </p>
             <div class="project-footer">
               <span>
@@ -258,11 +259,12 @@
             </a>
           </div>
           <div class="project-details">
-            <h4>space-invaders</h4>
+            <h4>space invaders</h4>
             <p>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deserunt
-              impedit vel architecto debitis ipsa nihil, ipsam asperiores in aut
-              consequatur!
+              Use A to go Left, D to go Right, and the Space Bar to shoot! Space
+              Invaders is a fixed shooter in which the player moves a laser
+              cannon horizontally across the bottom of the screen and fires at
+              aliens overhead.
             </p>
             <div class="project-footer">
               <span>
