--- a/projects.html
+++ b/projects.html
@@ -292,18 +292,18 @@
             </a>
           </div>
           <div class="project-details">
-            <h4>fighting-game</h4>
+            <h4>Fighting Game</h4>
             <p>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deserunt
-              impedit vel architecto debitis ipsa nihil, ipsam asperiores in aut
-              consequatur!
+              Fighting Game with HTML Canvas and Javascript. For two players.
+              Move Player One with W, A, S, D keys and move Player Two with the
+              Arrow Keys. Slash your opponent with the Space Bar!
             </p>
             <div class="project-footer">
               <span>
                 <i class="fab fa-github"></i>
               </span>
               <a
-                href="https://github.com/JorgeTorquato/01-JSGame-Fighting-game"
+                href="https://github.com/JorgeTorquato/02-space-invaders"
                 target="_blank"
                 >source code</a
               >
