--- a/index.html
+++ b/index.html
@@ -332,243 +332,19 @@
       </div>
     </section>
     <!-- end of connect -->
-    <!-- skills -->
-    <section class="section skills">
-      <!-- section title -->
-      <div class="section-title">
-        <h2>skills</h2>
-        <div class="underline"></div>
-      </div>
-      <!-- end of section title -->
-      <div class="section-center skills-center">
-        <article>
-          <h3>front end</h3>
-          <!-- single skill -->
-          <div class="skill">
-            <p>HTML/CSS</p>
-            <div class="skill-container">
-              <div class="skill-value"></div>
-              <p class="skill-text">50%</p>
-            </div>
-          </div>
-          <!--end of single skill -->
-          <!-- single skill -->
-          <div class="skill">
-            <p>Javascript</p>
-            <div class="skill-container">
-              <div class="skill-value value-70"></div>
-              <p class="skill-text skill-text-70">70%</p>
-            </div>
-          </div>
-          <!--end of single skill -->
-          <!-- single skill -->
-          <div class="skill">
-            <p>React</p>
-            <div class="skill-container">
-              <div class="skill-value value-80"></div>
-              <p class="skill-text skill-text-80">80%</p>
-            </div>
-          </div>
-          <!--end of single skill -->
-        </article>
-        <article>
-          <h3>back end</h3>
-          <!-- single skill -->
-          <div class="skill">
-            <p>Node</p>
-            <div class="skill-container">
-              <div class="skill-value"></div>
-              <p class="skill-text">50%</p>
-            </div>
-          </div>
-          <!--end of single skill -->
-          <!-- single skill -->
-          <div class="skill">
-            <p>PHP</p>
-            <div class="skill-container">
-              <div class="skill-value value-70"></div>
-              <p class="skill-text skill-text-70">70%</p>
-            </div>
-          </div>
-          <!--end of single skill -->
-          <!-- single skill -->
-          <div class="skill">
-            <p>Python</p>
-            <div class="skill-container">
-              <div class="skill-value value-80"></div>
-              <p class="skill-text skill-text-80">80%</p>
-            </div>
-          </div>
-          <!--end of single skill -->
-        </article>
-      </div>
-    </section>
-    <!-- end of skills -->
+
     <!-- timeline -->
-    <section class="section timeline">
-      <!-- section title -->
-      <div class="section-title">
-        <h2>timeline</h2>
-        <div class="underline"></div>
-      </div>
-      <!-- end of section title -->
-      <div class="section-center timeline-center">
-        <!-- single timeline item -->
-        <article class="timeline-item">
-          <h4>2022</h4>
-          <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsam
-            excepturi dignissimos inventore et error accusamus dolores
-            reprehenderit asperiores animi dolor!
-          </p>
-          <span class="number">1</span>
-        </article>
-        <!--end of single timeline item -->
-        <!-- single timeline item -->
-        <article class="timeline-item">
-          <h4>2021</h4>
-          <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsam
-            excepturi dignissimos inventore et error accusamus dolores
-            reprehenderit asperiores animi dolor!
-          </p>
-          <span class="number">2</span>
-        </article>
-        <!--end of single timeline item -->
-        <!-- single timeline item -->
-        <article class="timeline-item">
-          <h4>2020</h4>
-          <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsam
-            excepturi dignissimos inventore et error accusamus dolores
-            reprehenderit asperiores animi dolor!
-          </p>
-          <span class="number">3</span>
-        </article>
-        <!--end of single timeline item -->
-        <!-- single timeline item -->
-        <article class="timeline-item">
-          <h4>2019</h4>
-          <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsam
-            excepturi dignissimos inventore et error accusamus dolores
-            reprehenderit asperiores animi dolor!
-          </p>
-          <span class="number">4</span>
-        </article>
-        <!--end of single timeline item -->
-        <!-- single timeline item -->
-        <article class="timeline-item">
-          <h4>2018</h4>
-          <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsam
-            excepturi dignissimos inventore et error accusamus dolores
-            reprehenderit asperiores animi dolor!
-          </p>
-          <span class="number">5</span>
-        </article>
-        <!--end of single timeline item -->
-        <!-- single timeline item -->
-        <article class="timeline-item">
-          <h4>2017</h4>
-          <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsam
-            excepturi dignissimos inventore et error accusamus dolores
-            reprehenderit asperiores animi dolor!
-          </p>
-          <span class="number">6</span>
-        </article>
-        <!--end of single timeline item -->
-      </div>
-    </section>
+
     <!--end of  timeline -->
     <!-- blog -->
     <section class="section blog">
       <!-- section title -->
       <div class="section-title">
-        <h2>Last Projects</h2>
+        <h2>Javascript Games</h2>
         <div class="underline"></div>
       </div>
       <!-- end of section title -->
       <div class="section-center blog-center">
-        <!-- single article -->
-        <div class="card">
-          <!-- card front  -->
-          <div class="card-side card-front">
-            <img src="./images/backroads.jpg" alt="website" />
-            <div class="card-info">
-              <h4>Backroads website</h4>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum
-                facilis optio officiis sequi similique a quae velit
-                necessitatibus dolores repudiandae.
-              </p>
-              <div class="card-footer">
-                <img src="./images/portfolio-pic.JPG" alt="author image" />
-                <p>Flip the Card and...</p>
-              </div>
-            </div>
-          </div>
-          <!-- card back -->
-          <div class="card-side card-back">
-            <a href="https://luque-backroads.netlify.app/" target="_blank">
-              <button class="btn">Take a Look</button>
-            </a>
-          </div>
-        </div>
-        <!--end of single article -->
-        <!-- single article -->
-        <div class="card">
-          <!-- card front  -->
-          <div class="card-side card-front">
-            <img src="./images/tea station.jpg" alt="website" />
-            <div class="card-info">
-              <h4>Special crafted tea website</h4>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum
-                facilis optio officiis sequi similique a quae velit
-                necessitatibus dolores repudiandae.
-              </p>
-              <div class="card-footer">
-                <img src="./images/portfolio-pic.JPG" alt="author image" />
-                <p>Flip the Card and...</p>
-              </div>
-            </div>
-          </div>
-          <!-- card back -->
-          <div class="card-side card-back">
-            <a href="https://luque-tea-project.netlify.app/" target="_blank">
-              <button class="btn">Take a look</button>
-            </a>
-          </div>
-        </div>
-        <!--end of single article -->
-        <!-- single article -->
-        <div class="card">
-          <!-- card front  -->
-          <div class="card-side card-front">
-            <img src="./images/Doe Portfolio.jpg" alt="website" />
-            <div class="card-info">
-              <h4>Portfolio project</h4>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum
-                facilis optio officiis sequi similique a quae velit
-                necessitatibus dolores repudiandae.
-              </p>
-              <div class="card-footer">
-                <img src="./images/portfolio-pic.JPG" alt="author image" />
-                <p>Flip the Card and...</p>
-              </div>
-            </div>
-          </div>
-          <!-- card back -->
-          <div class="card-side card-back">
-            <a href="https://porfolio-project-01.netlify.app/" target="_blank">
-              <button class="btn">Take a Look</button>
-            </a>
-          </div>
-        </div>
-        <!--end of single article -->
         <!-- single article -->
         <div class="card">
           <!-- card front  -->
